--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,33 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-image: url("assets/images/puzzel2.jpg");
+    background-size: cover;
+}
+
+#container {
+    margin-top: 10%;
+}
+
+#puzzleContainer,
+#lists li {
+    background: #000;
+    color: cornsilk;
+    text-align: center;
+}
+
+#puzzleContainer {
+    opacity: 0.85;
+}
+
+#lists li {
+    font-size: 3.5em;
+    padding: 3% 3%;
+    box-sizing: content-box;
+    border: 1px solid #fff;
+}
+
+ul#lists {
+    flex-direction: column;
 }
